--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -25,6 +25,10 @@
                 <source>Products</source>
                 <target>Produkte</target>
             </trans-unit>
+            <trans-unit id="tx_cart.module.coupons">
+                <source>Coupons</source>
+                <target>Gutscheine</target>
+            </trans-unit>
 
             <trans-unit id="tx_cart.plugin.mini_cart">
                 <source>Cart: Mini-Cart</source>
@@ -403,6 +407,10 @@
                 <source>Order Shipping</source>
                 <target>Versandmethode</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_shipping.service_id">
+                <source>Service ID</source>
+                <target>Service ID</target>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_shipping.name">
                 <source>Name</source>
                 <target>Name</target>
@@ -450,6 +458,10 @@
             <trans-unit id="tx_cart_domain_model_order_payment">
                 <source>Order Payment</source>
                 <target>Bezahlmethode</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_payment.service_id">
+                <source>Service ID</source>
+                <target>Service ID</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_payment.name">
                 <source>Name</source>
