[TASK] #34 - add order payment success and payment cancel templates

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.3
+    2016-11-11
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #34: add order payment success and payment cancel templates
+
 1.6.2
     2016-11-11
     Daniel Lorenz <daniel.lorenz@extco.de>
