--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.4
+    2016-11-15
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #37: create hashes in cart (database model) constructor
+
 1.6.3
     2016-11-11
     Daniel Lorenz <daniel.lorenz@extco.de>
