--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -628,6 +628,9 @@
             <trans-unit id="tx_cart_domain_model_product_product.div.tags_categories">
                 <source>Tags and Categories</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.div.stock">
+                <source>Stock</source>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_product_product.palette.prices">
                 <source>Prices</source>
@@ -637,9 +640,6 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.palette.service_attributes">
                 <source>Service Attributes</source>
-            </trans-unit>
-            <trans-unit id="tx_cart_domain_model_product_product.palette.stock">
-                <source>Stock</source>
             </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_product_product">
@@ -752,6 +752,9 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.handle_stock">
                 <source>Stock handling</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.handle_stock_in_variants">
+                <source>Stock handling in variants</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.stock">
                 <source>Stock</source>
