--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.6
+    2016-12-04
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #42: only attach documents when rendered
+
 1.6.5
     2016-11-15
     Daniel Lorenz <daniel.lorenz@extco.de>
