--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.7
+    2016-12-04
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #43: skip rendering PDFs when a payment provider is found and used
+
 1.6.6
     2016-12-04
     Daniel Lorenz <daniel.lorenz@extco.de>
