--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.8
+    2016-12-05
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #44: change transaction model tnxId length and add externalStatusCode
+
 1.6.7
     2016-12-04
     Daniel Lorenz <daniel.lorenz@extco.de>
