[TASK] #46 - add_special prices to backend variants

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.8.0
+    2016-12-08
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #46: add special prices to be variants
+
 1.7.0
     2016-12-06
     Daniel Lorenz <daniel.lorenz@extco.de>
