--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.8.1
+    2016-12-09
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #50: add documentation for backend and frontend variants
+
 1.8.0
     2016-12-08
     Daniel Lorenz <daniel.lorenz@extco.de>
