[TASK] #47 - add reply to for seller mails

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.8.2
+    2016-12-09
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #47: add reply to for seller mails
+
 1.8.1
     2016-12-09
     Daniel Lorenz <daniel.lorenz@extco.de>
