--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.8.5
+    2016-12-16
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #55: documentation how to add service attribute calculation
+
 1.8.4
     2016-12-10
     Daniel Lorenz <daniel.lorenz@extco.de>
