--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -864,11 +864,11 @@
             <trans-unit id="tx_cart_domain_model_product_specialprice">
                 <source>Special Price</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_product_specialprice.frontend_user_group">
-                <source>Frontend User Group</source>
+            <trans-unit id="tx_cart_domain_model_product_specialprice.title">
+                <source>Title</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_product_specialprice.frontend_user_group.not_available">
-                <source>Frontend User Group</source>
+            <trans-unit id="tx_cart_domain_model_product_specialprice.frontend_user_group">
+                <source>Website Usergroup</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_specialprice.price">
                 <source>Price</source>
