--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.3.1
+    2017-01-23
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #65: save configured currency sign to order item
+
 2.3.0
     2017-01-21
     Daniel Lorenz <daniel.lorenz@extco.de>
