[TASK] #67 - save comment in order item

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.3.2
+    2017-01-25
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #67: save comment in order item
+
 2.3.1
     2017-01-23
     Daniel Lorenz <daniel.lorenz@extco.de>
