--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -341,12 +341,12 @@
             </trans-unit>
 
             <trans-unit id="tx_cart.mail.buyer.subject">
-                <source>Subject for Buyer</source>
-                <target>Betreff für Käufer</target>
+                <source>Order confirmation - %s</source>
+                <target>Bestellbestätigung - %s</target>
             </trans-unit>
             <trans-unit id="tx_cart.mail.seller.subject">
-                <source>Subject for Seller</source>
-                <target>Betreff für Verkäufer</target>
+                <source>Order receipt - %s</source>
+                <target>Bestelleingang - %s</target>
             </trans-unit>
 
             <trans-unit id="filter">
