--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.4.3
+    2017-02-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #71: fix travis configuration
+
 2.4.2
     2017-02-07
     Daniel Lorenz <daniel.lorenz@extco.de>
