--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+3.0.0
+    2017-02-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
 2.4.3
     2017-02-18
     Daniel Lorenz <daniel.lorenz@extco.de>
