[TASK] #63 - add quantity discounts / graduated prices for products

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
     2017-02-18
     Daniel Lorenz <daniel.lorenz@extco.de>
 
+    * TASK #63: add quantity discounts / graduated prices for products
+
 2.4.3
     2017-02-18
     Daniel Lorenz <daniel.lorenz@extco.de>
