--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -795,6 +795,10 @@
                 <source>Prices</source>
                 <target>Preise</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.div.measures">
+                <source>Measures</source>
+                <target>Maßangaben</target>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.div.variants">
                 <source>Variants</source>
                 <target>Varianten</target>
@@ -878,6 +882,10 @@
             <trans-unit id="tx_cart_domain_model_product_product.special_prices">
                 <source>Special Prices</source>
                 <target>Spezialpreise</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.quantity_discounts">
+                <source>Quantity Discount</source>
+                <target>Mengenrabatt</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.tax_class_id">
                 <target>Steuerklasse</target>
@@ -1086,6 +1094,19 @@
             <trans-unit id="tx_cart_domain_model_product_specialprice.price">
                 <source>Price</source>
                 <target>Preis</target>
+            </trans-unit>
+
+            <trans-unit id="tx_cart_domain_model_product_quantitydiscount">
+                <source>Quantity Discount</source>
+                <target>Staffelpreis</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_quantitydiscount.price">
+                <source>Price</source>
+                <target>Preis</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_quantitydiscount.quantity">
+                <source>Quantity (lower bound)</source>
+                <target>Amzahl (untere Grenze)</target>
             </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_product_tag">
