--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -682,6 +682,12 @@
             <trans-unit id="tx_cart_domain_model_product_product.special_price">
                 <source>Special Price</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.quantity_discounts">
+                <source>Quantity Discount</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.quantity_discount_from">
+                <source>from %s</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.price.from">
                 <source>from</source>
             </trans-unit>
