--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 3.0.0
-    2017-02-23
+    2017-02-24
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #63: add quantity discounts / graduated prices for products
@@ -10,6 +10,7 @@
     * TASK #76: realurl improvements
     * TASK #74: show vat in cart summary and mails
     * TASK #77: add signal slot to change order item before saving
+    * TASK #78: use testing framework instead of typo3 source
 
 2.4.3
     2017-02-18
