--- a/Documentation/Misc/Changelog/3.0.0.rst
+++ b/Documentation/Misc/Changelog/3.0.0.rst
@@ -276,3 +276,42 @@ Die neuen Signal Slots, erlauben es vor oder nach dem eigentlichen 'handlePaymen
 .. IMPORTANT::
    Der Signal Slot 'handlePaymentAfterOrder' wurde in 'handlePayment' umbenannt. Wer diesen Signal Slot bereits verwendet muss unbedingt den Aufruf anpassen.
    Bisher wurden dieser für die Erweiterungen CartPaypal, CartGirosolution, CartPayone und CartSaferpay verwendet. Ein entsprechendes Update dieser Erweiterungen wird ebenfalls bereitgestellt.
+
+
+#80 Signal Slot 'loadCartProductFromForeignDataStorage' zum Laden von Produkten aus externen Quellen
+====================================================================================================
+
+Um das Laden von Produkten aus fremden Quellen (Tabellen, Repositories) und eigenen Logiken zu vereinfachen wird nun ein Signal Slot angeboten.
+Die ausgelagerte ProductUtility Klasse beinhaltent nur noch die Logik um die Produkte aus den Cart Tabellen zu laden und für den Warenkorb aufzubereiten. Die Konfiguration über TypoScript entfällt.
+
+.. IMPORTANT::
+   Wer schon jetzt Produkte aus anderen Datenbanktabellen benötig, muss den Signal Slot 'loadCartProductFromForeignDataStorage' verwenden, um die Produkte aus der jeweiligen Quelle zu laden.
+
+Eine Beispielimplementierung und die Einbindung in Cart ist in der Erweiterung `CartSimpleProduct <https://github.com/extcode/cart_simple_product>`__  gezeigt.
+
+Da sich die Implementierung nur noch auf die mitgebrachten Produkttabellen beschränkt können die TypoScript-Konfigurationen aufgeräumt werden.
+Eine Konfiguration der Getter und Setter ist über TypoScript nicht mehr nötig und möglich.
+
+Das mitgelieferte TypoScript sieht in etwa so aus:
+
+::
+
+   plugin.tx_cart {
+       db >
+       repository >
+
+       productStorages {
+           1 {
+               class = Extcode\Cart\Domain\Repository\Product\ProductRepository
+           }
+       }
+   }
+
+|
+
+Für die eigene Produkttabelle oder das eigene Produktrepository kann dann entsprechend eine eigene Konfiguration 2 hinterlegt werden.
+
+.. IMPORTANT::
+   Das Formular zum Hinzufügen von Produkten zum Warenkorb kann das optionale Feld 'productStorageId' enthalten. Dieses bestimmt, welche Konfiguration genutzt wird.
+   Ist die konfigurierte Klasse eine andere als Extcode\Cart\Domain\Repository\Product\ProductRepository, werden alle registrierten Slots ausgeführt. In der eigenen Klasse muss dann entschieden werden, ob diese für die übergebene productStorageId verantwortlich ist.
+   Dann kann mit den aus dem Storage geladenen Daten ein Cart\Product erzeugt und zurückgegeben werden.
